# amoeba

./: .gitignore  .gitmodules  BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build.sh  build.ts  generated.txt  generatedmacos-latest.txt  generatedubuntu-latest.txt  generatedwindows-latest.txt  package.json
.github/workflows/: build_all.yaml
example/: BeefProj.toml
example/src/: Program.bf
libs/debug/windows/: amoeba.lib
libs/release/windows/: amoeba.lib
libs/windows/: amoeba.lib  amoebad.lib
libs/windows/win32/: amoeba.lib  amoeba_d.lib
libs/windows/x64/: amoeba.lib  amoeba_d.lib
src/: amoeba.bf
